# flux

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
docs/: README.md  api.md  architecture.md  contributing.md  conventions.md  development.md  index.md  positioning.md  release-readiness.md  rendering.md  roadmap.md  testing.md  vulkan-backend.md  wayland.md
docs/adr/: 0001-record-architecture-decisions.md  0002-keep-flux-as-low-level-rendering-substrate.md  0003-renderer-vtable.md  0004-logging-architecture.md  index.md
docs/dev/: code-style.md  contributing.md  index.md  project-layout.md  release-process.md  setup.md  testing.md
docs/explanation/: algorithms.md  application-architecture.md  architecture-overview.md  bezier-curves.md  blend-modes.md  capability-model.md  glyph-atlas.md  graphics-foundations.md  index.md  pixel-formats.md  positioning.md  rendering-pipeline.md  rendering.md  responsibility-boundaries.md  rhi-design.md  roadmap.md  software-renderer.md  testing-strategy.md  text-rendering-pipeline.md  vulkan-backend.md  wayland-integration.md  why-triangles.md
docs/how-to/: debug-gpu-issues.md  draw-basic-shapes.md  how-to-configure-logging.md  index.md  link-flux.md  manage-memory.md  optimize-performance.md  record-and-present-a-frame.md  render-svg-assets.md  render-text.md  run-from-source.md  troubleshooting.md  use-from-zig.md
docs/reference/: api-stability.md  api.md  configuration.md  glossary.md  index.md  logging.md  platforms.md  thread-safety.md
docs/tutorials/: 01-getting-started.md  02-building-an-application.md  index.md
examples/: hello_rect.c  meson.build  minimal.c  windowed.c
include/flux/: flux.h  flux_log_helper.h  flux_vulkan.h
include/vgfx/: vgfx.h  vgfx_wayland.h
scripts/: check-release-readiness.py
src/: arena.c  canvas.c  context.c  engine.c  image.c  internal.h  meson.build  path.c  stroker.c  surface.c  tess.c  text.c  visibility.h
src/geometry/: geometry.h  path.c  stroker.c  tess.c
src/math/: arena.c  arena.h  color.c  matrix.c  matrix.h  rect.h
src/renderer/: renderer.h  software.c
src/renderer/vulkan/: device.c  memory.c  memory.h  swapchain.c  upload.c  vk_internal.h  vulkan_renderer.c
src/resource/: context.c  image.c  log_helper.c  text.c  vulkan_device.c
src/rhi/: rhi.h
src/rhi/software/: software_rhi.c
src/rhi/vulkan/: memory.h  vk_draw.c  vk_internal.h  vk_pipeline.c  vk_swapchain.c  vk_texture.c  vulkan_rhi.c
src/shaders/: blur.frag  fringe.frag  fringe.vert  gradient.frag  gradient.vert  image.frag  image.vert  solid_color.frag  solid_color.vert  text.frag
src/state/: canvas.c  gradient.c  paint.c  state.h
src/vk/: device.c  memory.c  memory.h  swapchain.c  upload.c
tests/: bench_render.c  meson.build  test_allocator.c  test_api_surface.c  test_arc.c  test_canvas_transform.c  test_clip.c  test_color.c  test_error_logging.c  test_fill_rect.c  test_foundation.c  test_glyph_run.c  test_golden.c  test_gradient.c  test_gradient_stops.c  test_helpers.h  test_image.c  test_image_update.c  test_log_helper.c  test_matrix.c  test_missing_apis.c  test_multi_subpath.c  test_null_safety.c  test_offscreen.c  test_paint.c  test_path.c  test_path_edge_cases.c  test_path_flatten.c  test_rect.c  test_stroker.c  test_surface_context.c  test_tess.c  test_transform_stack.c  test_transforms.c  test_version.c  test_vulkan_smoke.c
tests/golden/: clip.ppm  glyph.ppm  path_aa.ppm  solid_rect.ppm  transform.ppm
