test_foundation = executable('test_foundation',
  'test_foundation.c',
  dependencies : [flux_dep],
)

test_path_flatten = executable('test_path_flatten',
  'test_path_flatten.c',
  dependencies : [flux_dep],
)

test_arc = executable('test_arc',
  'test_arc.c',
  dependencies : [flux_dep],
)

test_tess = executable('test_tess',
  'test_tess.c',
  dependencies : [flux_dep],
)

test_stroker = executable('test_stroker',
  'test_stroker.c',
  dependencies : [flux_dep],
)

test_transforms = executable('test_transforms',
  'test_transforms.c',
  dependencies : [flux_dep],
)

test_offscreen = executable('test_offscreen',
  'test_offscreen.c',
  dependencies : [flux_dep],
)

test_transform_stack = executable('test_transform_stack',
  'test_transform_stack.c',
  dependencies : [flux_dep],
)

test_fill_rect = executable('test_fill_rect',
  'test_fill_rect.c',
  dependencies : [flux_dep],
)

test_image_update = executable('test_image_update',
  'test_image_update.c',
  dependencies : [flux_dep],
)

test_error_logging = executable('test_error_logging',
  'test_error_logging.c',
  dependencies : [flux_dep],
)

test_gradient = executable('test_gradient',
  'test_gradient.c',
  dependencies : [flux_dep],
)

test_missing_apis = executable('test_missing_apis',
  'test_missing_apis.c',
  dependencies : [flux_dep],
)

test_clip = executable('test_clip',
  'test_clip.c',
  dependencies : [flux_dep],
)

test_multi_subpath = executable('test_multi_subpath',
  'test_multi_subpath.c',
  dependencies : [flux_dep],
)

test_matrix = executable('test_matrix',
  'test_matrix.c',
  dependencies : [flux_dep],
)

test_color = executable('test_color',
  'test_color.c',
  dependencies : [flux_dep],
)

test_paint = executable('test_paint',
  'test_paint.c',
  dependencies : [flux_dep],
)

test_path_edge_cases = executable('test_path_edge_cases',
  'test_path_edge_cases.c',
  dependencies : [flux_dep],
)

test_glyph_run = executable('test_glyph_run',
  'test_glyph_run.c',
  dependencies : [flux_dep],
)

test_rect = executable('test_rect',
  'test_rect.c',
  dependencies : [flux_dep],
)

test_null_safety = executable('test_null_safety',
  'test_null_safety.c',
  dependencies : [flux_dep],
)

test_gradient_stops = executable('test_gradient_stops',
  'test_gradient_stops.c',
  dependencies : [flux_dep],
)

test_surface_context = executable('test_surface_context',
  'test_surface_context.c',
  dependencies : [flux_dep],
)

test('foundation', test_foundation, suite : 'unit')
test('path_flatten', test_path_flatten, suite : 'unit')
test('arc', test_arc, suite : 'unit')
test('tess', test_tess, suite : 'unit')
test('stroker', test_stroker, suite : 'unit')
test('transforms', test_transforms, suite : 'unit')
test('transform_stack', test_transform_stack, suite : 'unit')
test('fill_rect', test_fill_rect, suite : 'unit')
test('image_update', test_image_update, suite : 'unit')
test('error_logging', test_error_logging, suite : 'unit')
test('matrix', test_matrix, suite : 'unit')
test('color', test_color, suite : 'unit')
test('paint', test_paint, suite : 'unit')
test('path_edge_cases', test_path_edge_cases, suite : 'unit')
test('glyph_run', test_glyph_run, suite : 'unit')
test('rect', test_rect, suite : 'unit')
test('null_safety', test_null_safety, suite : 'unit')
test('gradient_stops', test_gradient_stops, suite : 'unit')
test('gradient', test_gradient, suite : 'integration')
test('missing_apis', test_missing_apis, suite : 'integration')
test('offscreen', test_offscreen, suite : 'integration')
test('clip', test_clip, suite : 'integration')
test('multi_subpath', test_multi_subpath, suite : 'integration')
# test('surface_context', test_surface_context, suite : 'integration')
